# foxmask

./: README.md  pnpm-lock.yaml  pnpm-workspace.yaml
backend/: .env.example  README.md  docker-compose.yml  dockerfile  gen_secret.py  main.py  pdf.py  pyproject.toml
backend/examples/: upload.py  upload_gql.py
backend/foxmask/: __init__.py  client.py  debug_enums.py  graphql.py  main.py  run_consumer.py  send.py  upload_client.py
backend/foxmask/auth/: __init__.py  dependencies.py  models.py  router.py  routers.py  schemas.py  services.py
backend/foxmask/core/: __init__.py  audit.py  cache.py  config.py  database.py  decorators.py  enums.py  exceptions.py  kafka.py  logger.py  minio.py  model.py  mongo.py  monitoring.py  redis.py  scheduler.py  schema.py  schemas.py  security.py  tracking.py  types.py
backend/foxmask/core/message/: consumers.py  kafka_topic.py  producers.py  schemas.py
backend/foxmask/core/middleware/: error_handler.py
backend/foxmask/document/: __init__.py  graphql.py  models.py  routers.py  schemas.py  services.py
backend/foxmask/examples/: client.py  config.yml  math_pdf_to_md_cpu.py  pdf2md.py  pdf_cn.py  pdf_md.py  pdf_to_md.py  ql.py  run_consumer.py  test.py  test_upload_service.py  upload-c.py  upload-client.js  upload.py  upload_client.py  upload_client_2.py
backend/foxmask/file/: __init__.py  enums.py  exceptions.py  graphql.py  main.py  models.py  mongo.py  router.py  routers.py  schemas.py  services.py
backend/foxmask/knowledge/: graphql.py  mongo.py  router.py  schemas.py
backend/foxmask/middleware/: tracking_middleware.py
backend/foxmask/shared/: dependencies.py  models.py  schemas.py
backend/foxmask/tag/: graphql.py  models.py  mongo.py  router.py  schemas.py  services.py
backend/foxmask/task/: __init__.py  consumers.py  dead_letter_processor.py  graphql.py  models.py  mongo.py  monitoring.py  producers.py  router.py  routers.py  schemas.py  services.py
backend/foxmask/tracking/: routers.py
backend/foxmask/utils/: casdoor_client.py  chunk_content copy.py  chunk_content.py  crypto.py  helpers.py  mineru_parser.py  minio_client.py  neo4j_client.py  pdf_md_converter.py  pdf_parser.py  validators.py  weaviate_client.py  weaviate_manager.py
backend/foxmask/vector/: weaviate_schema.py
backend/foxmask1/: __init__.py  m.py  main.py  main2.py
backend/foxmask1/auth/: __init__.py  dependencies.py  models.py  schemas.py
backend/foxmask1/core/: beanie.py  casdoor_auth.py  collections.py  config.py  database.py  db_utils.py  exceptions.py  index_manager.py  kafka.py  mongo copy.py  mongo.py  neo4j.py  security.py  startup.py  weaviate.py
backend/foxmask1/document/: __init__.py  models.py  routers.py  schemas.py  services.py
backend/foxmask1/file/: graphql.py  models.py  mongo.py  routers.py  schemas.py  services.py  utils.py
backend/foxmask1/knowledge/: graphql.py  models.py  routers.py  schemas.py  services.py  utils.py
backend/foxmask1/middleware/: __init__.py  auth.py  file.py  logging.py  rate_limit.py
backend/foxmask1/tag/: graphql.py  models.py  routers.py  schemas.py  services.py  utils.py
backend/foxmask1/task/: __init__.py  consumer.py  consumers.py  graphql.py  handlers.py  producer.py  routers.py  scheduler.py
backend/foxmask1/tracking/: routers.py
backend/foxmask1/utils/: image.py
backend/requirements/: base.txt  dev.txt  prod.txt
backend/script/: init_db.py  migrate.py  start_consumers.py
backend/scripts/: init_db.py  migrate.py  start_consumers.py
backend/tests/: conftest.py  pytest.ini  requirements-test.txt  run_tests.sh  test_document.py  test_file.py  test_task.py
backend/tests/e2e/: test_workflows.py
backend/tests/integration/: test_auth_api.py  test_file_api.py  test_knowledge_api.py
backend/tests/unit/: test_auth_services.py  test_file_services.py  test_knowledge_services.py  test_tag_services.py  test_task_services.py  test_utils.py
(+514 files in other folders)
