[project]
name = "foxmask"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=15.1.0",
    "aiofiles>=24.1.0",
    "aiokafka>=0.12.0",
    "apscheduler>=3.11.0",
    "beanie>=2.0.0",
    "beautifulsoup4>=4.13.5",
    "casdoor>=1.38.0",
    "dill>=0.4.0",
    "doclayout-yolo>=0.0.4",
    "docx>=0.2.4",
    "email-validator>=2.2.0",
    "fastapi>=0.116.1",
    "fitz>=0.0.1.dev2",
    "ftfy>=6.3.1",
    "gunicorn>=23.0.0",
    "html5lib>=1.1",
    "kafka-python>=2.2.15",
    "langchain-community<=0.3.29",
    "loguru>=0.7.3",
    "lxml>=6.0.1",
    "magika>=0.5.1",
    "matplotlib>=3.10.6",
    "mineru==2.5.3",
    "mineru-vl-utils>=0.1.11",
    "minio>=7.2.16",
    "motor>=3.7.1",
    "moviepy>=2.2.1",
    "mutagen>=1.47.0",
    "neo4j>=5.28.2",
    "numpy>=1.26.4",
    "omegaconf>=2.3.0",
    "onnxruntime>=1.22.1",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.2",
    "passlib>=1.7.4",
    "pillow>=11.3.0",
    "prometheus-client>=0.22.1",
    "psutil>=7.0.0",
    "pyclipper>=1.3.0.post6",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pymupdf>=1.26.4",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "redis>=6.4.0",
    "shapely>=2.1.1",
    "strawberry-graphql[fastapi]==0.280.0",
    "torch==2.2.2",
    "torchvision>=0.17.2",
    "transformers>=4.56.2",
    "typing-extensions>=4.14.1",
    "ultralytics>=8.3.203",
    "uvicorn>=0.35.0",
    "weaviate-client>=4.16.9",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "ruff>=0.12.10",
]
